apps/mlflow/upstream/overlays/istio/authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: mlflow
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - '*'  # FIXME
  selector:
    matchLabels:
      app: mlflow
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: mlflow-kfam
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/kubeflow/sa/mlflow
  selector:
    matchLabels:
      kustomize.component: profiles
